--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   firebase_storage: ^11.6.6
   date_format_field: ^0.1.0
   velocity_x: ^4.1.2
+  intl: ^0.18.1
 
 dev_dependencies:
   flutter_test:
